# ckanext-oauth2

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  test.ini
.github/workflows/: release.yml  tests.yml
ckanext/oauth2/: cli.py  db.py  oauth2.py  plugin.py  utils.py  views.py
ckanext/oauth2/migration/oauth2/: README  env.py
ckanext/oauth2/templates/: header.html
ckanext/oauth2/tests/: conftest.py  test_controller.py  test_db.py  test_jwt_rs256.py  test_oauth2.py  test_plugin.py  test_selenium.py
