[project]
name = "oauth2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic==1.13.2",
    "babel==2.15.0",
    "bleach==6.1.0",
    "blinker==1.8.2",
    "certifi>=2024.7.4",
    "ckan>=2.11.3",
    "click==8.1.7",
    "dominate==2.9.1",
    "feedgen==1.0.0",
    "flask==3.0.3",
    "flask-babel==4.0.0",
    "flask-login==0.6.3",
    "flask-session==0.8.0",
    "flask-wtf==1.2.1",
    "jinja2==3.1.6",
    "markdown==3.6",
    "msgspec==0.18.6",
    "packaging==24.1",
    "passlib==1.7.4",
    "polib==1.2.0",
    "psycopg2==2.9.9",
    "pyjwt==2.8.0",
    "pyparsing==3.1.2",
    "pysolr==3.9.0",
    "python-dateutil==2.9.0.post0",
    "python-magic==0.4.27",
    "pytz>=2025.2",
    "pyyaml==6.0.1",
    "requests==2.32.3",
    "rq==1.16.2",
    "simplejson==3.19.2",
    "sqlalchemy[mypy]==1.4.52",
    "sqlparse==0.5.0",
    "typing-extensions==4.12.2",
    "tzlocal==5.2",
    "webassets==2.0",
    "werkzeug[watchdog]==3.0.6",
    "zope-interface==6.4.post2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-factoryboy>=2.8.1",
]
