[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ckanext-oauth2"
version = "1.2.2"
description = "OAuth2 support for CKAN"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["CKAN", "OAuth2"]
authors = [
    {name = "Aitor Magán", email = "amagan@conwet.com"},
    {name = "Maximiliano Osorio", email="maxiosorio@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]


dependencies = [
    "oauthlib>=3.0",
    "requests-oauthlib>=1.0",
    "pyjwt[crypto]>=2.0",
]
[project.urls]
Homepage = "https://github.com/In-For-Disaster-Analytics/ckanext-oauth2"

[project.entry-points."ckan.plugins"]
oauth2 = "ckanext.oauth2.plugin:OAuth2Plugin"

[dependency-groups]
dev = [
    "httpretty>=1.1.4",
    "parameterized>=0.9.0",
    "pytest>=8.4.2",
    "pytest-factoryboy>=2.8.1",
]


[tool.setuptools.packages.find]
include = ["ckanext*"]
namespaces = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install build && python -m build"
major_on_zero = false
branch = "main"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.release]
match = "release"
prerelease = true
prerelease_token = "beta"